--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 	},
 	"compileType": "weapp",
 	"libVersion": "1.6.0",
-	"appid": "wxace2ed6a1689c8c0",
+	"appid": "wx2262391ecbef5a1b",
 	"projectname": "%E5%88%B7%E5%B1%8F%E7%A5%9E%E5%99%A8",
 	"condition": {
 		"weapp": {
